--- a/(2019) Elma/06. Dance of God.md
+++ b/(2019) Elma/06. Dance of God.md
@@ -12,7 +12,7 @@ await dv.view('_script');
 | 僕たち神様なんて知らん顔<br><br>何処までだって行ける<br><br>なぁ、心まで醜い僕らだ<br><br>世界は僕らのものだ                                   | bokutachi kami-sama nante shirankao<br><br>dokomade datte ikeru<br><br>naa, kokoro made minikui bokurada<br><br>sekai wa bokura no monoda                                                                       | We who know not the face of god<br><br>Are able to go anywhere <br><br>Hey, we’re ugly to the core<br><br>But the world belongs to us                                                                                                                                          | Chúng ta mang trên mình khuôn mặt phớt lờ thần thánh, chúng ta có thể đi đến bất cứ đâu<br><br>Chúng ta đến cả trái tim cũng xấu xí, thế giới này là của chúng ta                                         |
 | 音楽だけでいいんだろ<br><br>他人に合わせて歩くなよ<br><br>教えてくれたのはあんたじゃないか                                                | ongaku dake de ii ndaro<br><br>hito ni awasete aruku na yo<br><br>oshietekureta no wa anta janai ka                                                                                                             | It’s fine if it’s just through music right?<br><br>We don’t have to walk in step with the rest<br><br>Weren’t you the one who taught me that?                                                                                                                                  | Chỉ cần âm nhạc là đủ, đừng có hùa theo người khác<br><br>Chẳng phải người đã nói cho tớ điều đó là cậu sao?                                                                                              |
 | どうだっていいよ、このまま遠くへ<br><br>誰も知らない場所で月明かりを探すのだ                                                           | doodatte ii yo, kono mama toku e<br><br>daremo shiranai basho de tsukiakari o sagasu no da                                                                                                                      | It doesn’t matter to me, let’s go some place far away right now<br><br>We’ll look for the moonlight in a place unbeknownst to anyone                                                                                                                                           | Sao cũng được hết, cứ thế này ta sẽ đi thật xa<br><br>Và tìm ánh trăng ở một nơi mà không ai biết tới                                                                                                     |
-| 名のない花が綺麗とか<br><br>どうでもいいことばっかだ<br><br>君の口癖が感染ってる<br><br>喉の真下に君がいる                                    | namonai hana ga kirei toka<br><br>doo demo ii koto bakka da<br><br>kimi no kushiguse ga utsutteru<br><br>koo no mashita ni wa kimi ga iru                                                                       | “Flowers without a name are pretty” and all that jazz<br><br>Doesn’t really matter to me <br><br>But that phrase of yours is rubbing off on me<br><br>Right below my throat is where you exist                                                                                 | Bông hoa vô danh thật đẹp đẽ, gì chứ toàn những thứ sao cũng được cả<br><br>Ở đâu cũng thấy câu cửa miệng của cậu<br><br>Ngay bên dưới cổ họng của tớ chính là cậu                                        |
+| 名のない花が綺麗とか<br><br>どうでもいいことばっかだ<br><br>君の口癖が感染ってる<br><br>喉の真下に君がいる                                    | namonai hana ga kirei toka<br><br>doo demo ii koto bakka da<br><br>kimi no kushiguse ga utsutteru<br><br>nodo no mashita ni wa kimi ga iru                                                                      | “Flowers without a name are pretty” and all that jazz<br><br>Doesn’t really matter to me <br><br>But that phrase of yours is rubbing off on me<br><br>Right below my throat is where you exist                                                                                 | Bông hoa vô danh thật đẹp đẽ, gì chứ toàn những thứ sao cũng được cả<br><br>Ở đâu cũng thấy câu cửa miệng của cậu<br><br>Ngay bên dưới cổ họng của tớ chính là cậu                                        |
 | 言葉も人生も愛想も全て捨ててこそ音楽だ<br><br>この価値も知らないあんたに わかって 堪るものか                                                  | kotoba mo seikatsu mo aiso mo<br>subete sutete koso ongako da<br><br>sono kachi mo shirani anta ni<br>wakatte tamaru mono ka                                                                                    | Only when you’ve thrown away my words, my life, my everything, can music be made<br><br>How can you not understand what it costs?                                                                                                                                              | Âm nhạc chính là phải vứt hết tiếng nói, cuộc sống, yêu thương<br><br>Không hiểu được giá trị của âm nhạc như các người hiểu được điều đó sao?                                                            |
 | 暮れない夕に茜追い付いて<br><br>僕を染め抜いた<br><br>いつか時間が全て追い抜いて<br><br>消えないで                                        | kurenai yuu ni akane oitsuite<br><br>boku o somenuita<br><br>itsu ka jikan ga subete oinuite<br><br>kienaide                                                                                                    | A madder red chased the ever bright evening<br><br>Neglecting to dye me<br><br>One day, time will overtake everything<br><br>But don’t disappear                                                                                                                               | Ánh hoàng hôn tô lên bầu trời không đêm, nhưng không tô lên tớ<br><br>Thời gian xin đừng đuổi kịp mọi thứ rồi biến mất                                                                                    |
 | 僕たち神様なんて知らん顔<br><br>世界の全部が欲しい<br><br>なぁ、心まで醜いあんたの思い出全部をくれよ                                           | bokutachi kami-sama nante shirankao<br><br>sekai no zenbu ga hoshii<br><br>naa kokoro made minikui anta no, omoide zenbu o kureyo                                                                               | We, who know not the face of the gods<br><br>Want the whole world<br><br>Hey, give me your all your memories, you’re ugly to the core                                                                                                                                          | Chúng ta mang trên mình khuôn mặt phớt lờ thần thánh, khao khát mọi thứ trên thế gian<br><br>Này cậu, kẻ đến cả trái tim cũng xấu xí, hãy cho tớ tất cả những kỷ niệm của cậu đi                          |
